--- a/src/Feed.css
+++ b/src/Feed.css
@@ -3,8 +3,7 @@
     margin: 0 20px;
 }
 
-.feed_inputContainer{
-    display: flex;
+.feed__inputContainer{
     background-color: white;
     padding: 10px;
     padding-bottom: 20px;
@@ -21,7 +20,7 @@
     padding-left: 15px;
 }
 
-.feed_input > form{
+.feed__input > form{
     display: flex;
     width: 100%;
 }
@@ -36,4 +35,9 @@
 
 .feed__input > form > button {
     display: none;
+}
+
+.feed__inputOptions {
+    display: flex;
+    justify-content: space-evenly;
 }
